# techscreen-ai

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_criar_tabela_submissions.py
backend/app/: main.py
backend/app/api/: __init__.py  submissions.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py
backend/app/models/: __init__.py  submission.py
backend/app/repositories/: __init__.py  submission_repository.py
backend/app/schemas/: __init__.py  submission.py
backend/app/services/: ai_service.py
backend/app/tasks/: __init__.py  evaluate_submission.py
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/resultado/[id]/: MarkdownRenderer.tsx  page.tsx
