[tool.poetry]
name = "techscreen-ai"
version = "0.1.0"
description = "TechScreen AI — Plataforma de avaliação automática de testes técnicos com IA"
authors = ["TechScreen Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"  # For Alembic sync operations
alembic = "^1.14.0"

# Data validation
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.7.0"

# Task queue
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"
flower = "^2.0.1"

# AI / LLM
openai = "^1.59.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"

# Utilities
python-dotenv = "^1.0.1"
httpx = "^0.28.0"
structlog = "^24.4.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
anyio = "^4.7.0"
factory-boy = "^3.3.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
